--- a/notebooks/preprocessing_benchmark.ipynb
+++ b/notebooks/preprocessing_benchmark.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6990e8b4",
+   "id": "257d339d",
    "metadata": {},
    "source": [
     "**Table of contents**<a id='toc0_'></a>    \n",
@@ -23,6 +23,7 @@
     "      - [MACD Index](#toc2_1_1_2_)    \n",
     "      - [MFI Index](#toc2_1_1_3_)    \n",
     "      - [Stochastic Oscillator](#toc2_1_1_4_)    \n",
+    "      - [Boilinger Bands](#toc2_1_1_5_)    \n",
     "    - [Plot the NFLX Price values over time](#toc2_1_2_)    \n",
     "    - [Other related features](#toc2_1_3_)    \n",
     "      - [If the dividends/ split data is not available in the set, we can approximate Adjusted Closing Price to be close to Close Price](#toc2_1_3_1_)    \n",
@@ -31,7 +32,7 @@
     "      - [Some Time features like year, Month, weekday](#toc2_1_3_4_)    \n",
     "  - [Clean and Preprocessing](#toc2_2_)    \n",
     "    - [Check for stationarity of Close price](#toc2_2_1_)    \n",
-    "      - [Pre-requisites:](#toc2_2_1_1_)    \n",
+    "      - [Pre-requisites: Unit root and Return](#toc2_2_1_1_)    \n",
     "      - [Augmented Dickey-Fuller Test (ADF test):](#toc2_2_1_2_)    \n",
     "      - [Kwiatkowski-Phillips-Schmidt-Shin Test (KPSS):](#toc2_2_1_3_)    \n",
     "      - [Ljung-Box Test](#toc2_2_1_4_)    \n",
@@ -53,7 +54,7 @@
     "        - [Deep Intuition of the Formulas](#toc2_2_4_1_3_)    \n",
     "      - [Other Fourier variant: Short-Time Fourier Transform (STFT)](#toc2_2_4_2_)    \n",
     "      - [Wavelet shrinkage](#toc2_2_4_3_)    \n",
-    "        - [Pre-requisites: Wavelet and Wavelet Transform](#toc2_2_4_3_1_)    \n",
+    "        - [Pre-requisites: Wavelet and Wavelet Transform (Morlet, 1980)](#toc2_2_4_3_1_)    \n",
     "        - [The Wavelet Transformation in pywt](#toc2_2_4_3_2_)    \n",
     "        - [Scalogram](#toc2_2_4_3_3_)    \n",
     "        - [Global Spectrum](#toc2_2_4_3_4_)    \n",
@@ -72,8 +73,9 @@
     "          - [Pre-requisites: Alternate Direction Method of Multiplier (ADMM)](#toc2_2_4_5_6_2_)    \n",
     "        - [MEMD](#toc2_2_4_5_7_)    \n",
     "        - [Noise-Assisted Multivariate Empirical Mode Decomposition (NA-MEMD)](#toc2_2_4_5_8_)    \n",
-    "        - [Pre-requisites: Hilbert Transform](#toc2_2_4_5_9_)    \n",
-    "        - [Pre-Pre-requisites: Cauchy Principle Value](#toc2_2_4_5_10_)    \n",
+    "        - [Dynamic Mode Decomposition (DMD)](#toc2_2_4_5_9_)    \n",
+    "        - [Pre-requisites: Hilbert Transform (Hilbert, 1905)](#toc2_2_4_5_10_)    \n",
+    "        - [Pre-Pre-requisites: Cauchy Principle Value](#toc2_2_4_5_11_)    \n",
     "      - [Hilbert Spectrum Analysis (HSA)](#toc2_2_4_6_)    \n",
     "      - [Sample comprehensive implementation and comparison between methods](#toc2_2_4_7_)    \n",
     "      - [Additional: How to evaluate the smoothing technique](#toc2_2_4_8_)    \n",
@@ -1333,7 +1335,7 @@
    "id": "13c21a88",
    "metadata": {},
    "source": [
-    "#### Boilinger Bands"
+    "#### <a id='toc2_1_1_5_'></a>[Boilinger Bands](#toc0_)"
    ]
   },
   {
@@ -2198,10 +2200,10 @@
    "id": "ea8e63f6",
    "metadata": {},
    "source": [
-    "#### <a id='toc2_2_1_1_'></a>[Pre-requisites:](#toc0_)\n",
+    "#### <a id='toc2_2_1_1_'></a>[Pre-requisites: Unit root and Return](#toc0_)\n",
     "* Unit root (also called a unit root process or a difference stationary process): a stochastic trend in a time series, sometimes called \"a random walk with drift\", which is an unpredictable pattern occuring in a trend \n",
     "\n",
-    "The reason why this is called \"unit root\" is due to the maths behind the process. A process can be written as a series of monomials (expression with a single term). Each monomials correspond to a root, if 1 of the root is 1 then that's a unit root. \n",
+    "The reason why this is called \"unit root\" is due to the maths behind the process. A process can be written as a series of monomials (expression with a single term). Each monomial corresponds to a root, if 1 of the root is 1 then that's a unit root. \n",
     "\n",
     "$$y_t​=ρy_{t−1}​+ε_t​, ε_t​∼iid(0,σ^2)$$\n",
     "\n",
@@ -2280,7 +2282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "a1aa53b1",
    "metadata": {},
    "outputs": [
@@ -2329,7 +2331,7 @@
     "\n",
     "# diagnostics on returns\n",
     "print(\"Ljung-Box (returns):\", acorr_ljungbox(log_ret, lags=[10, 20], return_df=True))\n",
-    "print(\"ARCH test (returns):\", het_arch(log_ret))\n"
+    "print(\"ARCH test (returns):\", het_arch(log_ret))"
    ]
   },
   {
@@ -3159,8 +3161,8 @@
     "\n",
     "Also from the formula above we can get a shortcut formula to find the basis: \n",
     "\n",
-    "$$sin(\\omega0 t) = e^{j\\omega0 t} - e^{-j\\omega0 t}$$\n",
-    "$$cos(\\omega0 t) = e^{j\\omega0 t} + e^{-j\\omega0 t}$$\n",
+    "$$sin(\\omega_0 t) = e^{j\\omega_0 t} - e^{-j\\omega_0 t}$$\n",
+    "$$cos(\\omega_0 t) = e^{j\\omega_0 t} + e^{-j\\omega_0 t}$$\n",
     "\n"
    ]
   },
@@ -3188,7 +3190,7 @@
     "And applying Euler's formulas: \n",
     "\n",
     "$$\\int_{T_0}e^{j(k-n)\\omega0 t}dt = \\int_{T_0}cos((k-n)\\omega0 t)dt + j\\int_{T_0}sin((k-n)\\omega0 t)dt = 0$$\n",
-    "with k != n\n",
+    "with $k \\neq n$\n",
     "\n",
     "This is due to in the period $T_0$, there are exactly (k-n) periods of the cos and sin function, which when added together repel to 0.\n",
     "\n",
@@ -3430,7 +3432,7 @@
    "id": "aa99e38f",
    "metadata": {},
    "source": [
-    "##### <a id='toc2_2_4_3_1_'></a>[Pre-requisites: Wavelet and Wavelet Transform](#toc0_)\n",
+    "##### <a id='toc2_2_4_3_1_'></a>[Pre-requisites: Wavelet and Wavelet Transform (Morlet, 1980)](#toc0_)\n",
     "\n",
     "* A wavelet is a wave-like oscillation with an amplitude that begins at 0, increases/ decreases, then return to 0 one or more times (mean-0 finite). Wavelets are termed a \"brief oscillation\". Mathematically, a wavelet correlates with a signal if a portion of the signal is similar. \n",
     "\n",
@@ -3730,7 +3732,7 @@
    "id": "16f7c8e0",
    "metadata": {},
    "source": [
-    "#### <a id='toc2_2_4_4_'></a>[Hilbert-Huang Transform (HHT)](#toc0_)\n",
+    "#### <a id='toc2_2_4_4_'></a>[Hilbert-Huang Transform (HHT) (Huang 1998)](#toc0_)\n",
     "\n",
     "The Hilbert Transform introduces a new distinct branch of signal processing with a view to obtaining instantaneous frequency components from an original series, one major advantage of HHT is that the adaptive nature in decomposition, by entirely driven by the data itself instead of using a fixed basis or choosing from a given set like Fourier or Wavelets. \n",
     "\n",
@@ -5055,7 +5057,7 @@
    "id": "c89dc49a",
    "metadata": {},
    "source": [
-    "##### Dynamic Mode Decomposition (DMD)"
+    "##### <a id='toc2_2_4_5_9_'></a>[Dynamic Mode Decomposition (DMD)](#toc0_)"
    ]
   },
   {
@@ -5063,7 +5065,7 @@
    "id": "0e586ee9",
    "metadata": {},
    "source": [
-    "##### <a id='toc2_2_4_5_9_'></a>[Pre-requisites: Hilbert Transform](#toc0_)"
+    "##### <a id='toc2_2_4_5_10_'></a>[Pre-requisites: Hilbert Transform (Hilbert, 1905)](#toc0_)"
    ]
   },
   {
@@ -5071,7 +5073,7 @@
    "id": "b9d6c0e2",
    "metadata": {},
    "source": [
-    "##### <a id='toc2_2_4_5_10_'></a>[Pre-Pre-requisites: Cauchy Principle Value](#toc0_)\n",
+    "##### <a id='toc2_2_4_5_11_'></a>[Pre-Pre-requisites: Cauchy Principle Value](#toc0_)\n",
     "\n",
     "The Cauchy principle Value is a method for assigning values to certain improper integrals (e.g. unbounded integral) which would otherwise be undefined. In this method, a singularity (the point where the function is invalid) of the integral is avoided by limiting the integral interval to the non-singular domain.\n",
     "\n",
@@ -5155,7 +5157,7 @@
     "\n",
     "$$z_k(t) = IMF_k(t) + jH\\{IMF_k(t)\\}$$\n",
     "\n",
-    "* Extract instataneous frequency $A_k(t)$ and amplitude $\\omega_k(t)$ from each IMF\n",
+    "* Extract instantaneous frequency $A_k(t)$ and amplitude $\\omega_k(t)$ from each IMF\n",
     "* Combine them into the Hilbert Spectrum\n",
     "\n",
     "$$H(\\omega, t) = \\Re \\left\\{ \\sum_{k=1}^{N} A_k(t) \\, e^{j \\int \\omega_k(t)\\, dt} \\right\\}$$\n",
@@ -5658,22 +5660,6 @@
     "How much variance is explained by the smooth version:\n",
     "\n",
     "$$SNR = 10.log_{10}(\\frac{Var(\\hat{y}_t)}{Var(y_t - \\hat{y}_t)})$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dcd6a1db",
-   "metadata": {},
-   "source": [
-    "##### <a id='toc2_2_4_8_5_'></a>[Fuzzy Entropy (FE)](#toc0_)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "801a0376",
-   "metadata": {},
-   "source": [
-    "\"Fuzzy\" means vague. In general, Fuzzy Entropy quantifies the vagueness, ambiguity. This metric is widely used to quantify the complexity or irregularity in time series. Fuzzy entropy is a refinement of Sample Entropy (SampEN) and Approximate Entropy (ApEn)"
    ]
   },
   {
@@ -6477,6 +6463,114 @@
     "where N(x) represents the normalization processing (MaxMinScaler) $$N(x) = \\frac{x-x_{min}}{x_{max} - x_{min}}$$\n",
     "\n",
     "The multiplication implies that if either memtric is unfavorable (near 0 after normalization) then CI becomes small, this penalizes IMFs that are only good in 1 dimension (correlated but ver noisy or vice versa) and makes sure that IMFs strong in both measures will stand out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3abfdfc0",
+   "metadata": {},
+   "source": [
+    "##### <a id='toc2_2_4_8_5_'></a>[Fuzzy Entropy (FE)](#toc0_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abc64dd5",
+   "metadata": {},
+   "source": [
+    "Starting the same with the previous 2 entropy formulas, the FuzzyEn also begins with splitting the original data into subsequent series of same embedding dimension m, define the tolerance r and calculate all of the distances from a set X(i) to all other sets X(j); however, while the similarity function of ApEn and SampEn is calculated as 0 or 1 based on the tolerance as threshold, the Fuzzy similarity follows the rule of fuzzy set and Membership function to assign a more gradual level of similarity."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a1589f4",
+   "metadata": {},
+   "source": [
+    "##### Pre-requisites: Fuzzy sets \n",
+    "\n",
+    "Also known as uncertain sets, are sets whose elements have degrees of membership. A fuzzy set is a generalization of a classical (crisp) set\n",
+    "\n",
+    "In a classical set, an element either belongs to or doesn not belong to a set. Membership is binary:\n",
+    "\n",
+    "$$\\mu_A(x) =\n",
+    "\\begin{cases}\n",
+    "1, & \\text{if } x \\in A, \\\\\n",
+    "0, & \\text{if } x \\notin A\n",
+    "\\end{cases}$$\n",
+    "\n",
+    "In fuzzy sets, membership is gradual. Each element has a degree of membership between 0 and 1, representing how strongly it belongs to the set: \n",
+    "\n",
+    "$$\\mu_A(x) \\in [0,1]$$\n",
+    "\n",
+    "For example (0.2 -> slightly, 0.6 -> moderately, 0.9 -> highly)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a294b7e1",
+   "metadata": {},
+   "source": [
+    "##### Pre-requisites: Membership function \n",
+    "\n",
+    "In mathematics, the membership function defines the mapping from each element in the universe of discourse (domain) to its degree of membership/ truth in a fuzzy set. \n",
+    "\n",
+    "Note: the degree of truth is not to be confused with probabilities as degree of truth represents membership in a vaguely defined sets, not likelihood of some event or condition. \n",
+    "\n",
+    "$$\\mu_A: X -> [0,1]$$\n",
+    "\n",
+    "Where: \n",
+    "\n",
+    "* X = universe of discourse (all possible values of a variable)\n",
+    "* $\\mu_A(x)$ = membership grade of x in a fuzzy set A\n",
+    "\n",
+    "Some Common types of Membership Functions:\n",
+    "\n",
+    "1. Triangular\n",
+    "\n",
+    "Simple, defined by 3 points (a,b,c)\n",
+    "\n",
+    "$$\\mu(x) =\n",
+    "\\begin{cases}\n",
+    "0, & x \\leq a, \\\\[6pt]\n",
+    "\\dfrac{x-a}{b-a}, & a < x \\leq b, \\\\[10pt]\n",
+    "\\dfrac{c-x}{c-b}, & b < x < c, \\\\[10pt]\n",
+    "0, & x \\geq c\n",
+    "\\end{cases}$$\n",
+    "\n",
+    "2. Trapezoidal\n",
+    "\n",
+    "Like triangular but with a flat top.\n",
+    "\n",
+    "3. Gaussian\n",
+    "\n",
+    "Smooth curve:\n",
+    "\n",
+    "$$\\mu(x) = e^{-\\frac{(x-c)^2}{2\\sigma^2}}$$\n",
+    "\n",
+    "4. Sigmoid \n",
+    "\n",
+    "Models gradual transitions $$\\mu(x) = \\frac{1}{1+e^{-\\alpha (x-c)}}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "afa7d06c",
+   "metadata": {},
+   "source": [
+    "Fuzzy entropy doesn't count the absolute probability of similar vectors according to the hard thresholding criterion as applied in SampEn. Instead, Fuzzy Entropy estimates the probability that 2 vectors are similar based on the Fuzzy membership function. This greately improves robustness to noise, better monotonicity and superior performance\n",
+    "\n",
+    "FuzzyEn starts the same like ApEn and SampEn by firstly picking the embedding dimension m to split the series into subsequent windows and later calculate the distance $d_{ij} = max_k|x_{i+k} - x_{j+k}|$. The main difference comes from the Entropy calculation by similarity. The formula can be calculated as: \n",
+    "\n",
+    "$$A_i^{(m)}(r) \n",
+    "= \\frac{1}{N - m\\tau} \n",
+    "\\sum_{\\substack{j=1 \\\\ j \\neq i}}^{N - m\\tau} \n",
+    "\\exp\\!\\left( - \\ln(2) \\left( \\frac{d_{ij}^{m}}{r} \\right)^{2} \\right)$$\n",
+    "\n",
+    "where instead of using binary flag, the similarity is measured as an exponential of log(distance), this is a Gaussian-like fuzzy membership function. When distance between X(i) and X(j) = tolerance r, similarity = 0.5 (as $-log_2$) and the closer the vectors, the similarity becomes near to 1. Later on, for each reference vector X(i), this fuzzy similarity is averaged with all other vectors X(j). \n",
+    "\n",
+    "The FuzzyEn can be calculated this way by: \n",
+    "\n",
+    "$$FuzzyEn(m, \\tau, r) = -ln\\frac{\\sum_{i = 1}^{N - m\\tau}A_i^{(m+1)}(r)}{\\sum_{i = 1}^{N - m\\tau}A_i^{(m)}(r)}$$"
    ]
   },
   {
